# soltarc-backend

./: .gitignore  Cargo.toml  Dockerfile  build.rs
logs/: core-backend.log.2026-05-09  core-backend.log.2026-05-10  core-backend.log.2026-05-11  core-backend.log.2026-05-12
proto/: auth.proto  payments.proto
src/: main.rs
src/api/: mod.rs  routers.rs
src/api/handlers/: health.rs  mod.rs
src/api/middleware/: auth.rs  mod.rs  roles.rs
src/dal/: archivos.rs  catalog_g.rs  centros_costo.rs  clientes.rs  configura.rs  costos_estimados.rs  detalle_proyecto.rs  egresos.rs  finanzas.rs  flujo_caja.rs  gn_grupos.rs  gn_usuarios.rs  ingresos.rs  mod.rs  partidas_ppto.rs  plan_obra.rs  plan_semanal.rs  ppto_a_proyecto.rs  ppto_seed.rs  presupuesto.rs  proveedores.rs  proyectos.rs  reportes.rs  saldos_bancos.rs  seguridad.rs  tenant_limite.rs  tipos_costo.rs  unidades.rs  xref_detalle_proy_finan.rs
src/domain/models/: accesos_rapidos.rs  catalog_g.rs  centros_costo.rs  clients.rs  configura.rs  costos_estimados.rs  csv_det_proyectos.rs  detalle_proyectos.rs  egresos.rs  finances.rs  flujo_caja.rs  gn_grupos.rs  gn_usuarios.rs  ingresos.rs  lookup.rs  mod.rs  partidas_fec_dep.rs  partidas_ppto.rs  partidas_presupuesto.rs  plan_obra.rs  plan_semanal.rs  ppto_a_proyecto.rs  presupuesto.rs  proveedores.rs  proyectos.rs  reportes.rs  saldos_bancos.rs  seguridad.rs  tipos_costo.rs  unidades.rs  xref_detalle_proy_finan.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: app_state.rs  mod.rs  return_code.rs
src/services/: mod.rs
templates/: emails.json
(+111 files in other folders)
